syntax = "proto3";

service User {
    rpc GetUser(UserRequest) returns (UserResponse) {}
}

message UserRequest {
    int32 id = 1;
}

message UserResponse {
    string name = 1;
}
